--- a/data/DUAL_undersampling.ipynb
+++ b/data/DUAL_undersampling.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-30T18:12:49.161763Z",
-     "start_time": "2025-05-30T18:12:49.158565Z"
+     "end_time": "2025-06-14T16:53:46.562050Z",
+     "start_time": "2025-06-14T16:53:46.558647Z"
     }
    },
    "cell_type": "code",
@@ -19,8 +19,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:44:33.592649Z",
-     "start_time": "2025-06-06T13:44:30.731384Z"
+     "end_time": "2025-06-17T18:52:49.404051Z",
+     "start_time": "2025-06-17T18:52:49.399124Z"
     }
    },
    "source": [
@@ -31,39 +31,39 @@
     "import pandas as pd\n"
    ],
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:44:37.850094Z",
-     "start_time": "2025-06-06T13:44:37.834076Z"
+     "end_time": "2025-06-17T18:52:50.157104Z",
+     "start_time": "2025-06-17T18:52:50.145012Z"
     }
    },
    "cell_type": "code",
    "source": "df_m = pd.read_csv('../dataset/minority.csv')",
    "id": "39094137c1a30f59",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 17
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:44:42.224471Z",
-     "start_time": "2025-06-06T13:44:38.481911Z"
+     "end_time": "2025-06-17T18:52:54.015058Z",
+     "start_time": "2025-06-17T18:52:50.643297Z"
     }
    },
    "cell_type": "code",
    "source": "df = pd.read_csv('../dataset/majority.csv')",
    "id": "eeda159a0a259427",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 18
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:44:43.365167Z",
-     "start_time": "2025-06-06T13:44:42.229003Z"
+     "end_time": "2025-06-17T18:52:54.945156Z",
+     "start_time": "2025-06-17T18:52:54.019099Z"
     }
    },
    "cell_type": "code",
@@ -88,13 +88,13 @@
    ],
    "id": "f7f9e18c10c9b044",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 19
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:44:43.922325Z",
-     "start_time": "2025-06-06T13:44:43.798282Z"
+     "end_time": "2025-06-17T18:52:55.523732Z",
+     "start_time": "2025-06-17T18:52:55.407508Z"
     }
    },
    "cell_type": "code",
@@ -108,13 +108,13 @@
    ],
    "id": "d540422159e6bd7d",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 20
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:44:46.348588Z",
-     "start_time": "2025-06-06T13:44:46.344151Z"
+     "end_time": "2025-06-17T18:52:55.803730Z",
+     "start_time": "2025-06-17T18:52:55.800344Z"
     }
    },
    "cell_type": "code",
@@ -128,13 +128,13 @@
    ],
    "id": "c8b5dc8358dd3bd2",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 21
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:44:49.500131Z",
-     "start_time": "2025-06-06T13:44:49.497097Z"
+     "end_time": "2025-06-17T18:52:56.846297Z",
+     "start_time": "2025-06-17T18:52:56.844127Z"
     }
    },
    "cell_type": "code",
@@ -146,8 +146,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:45:16.063476Z",
-     "start_time": "2025-06-06T13:44:50.178873Z"
+     "end_time": "2025-06-17T18:53:19.517682Z",
+     "start_time": "2025-06-17T18:52:57.330726Z"
     }
    },
    "cell_type": "code",
@@ -490,13 +490,13 @@
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 22
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:45:16.087890Z",
-     "start_time": "2025-06-06T13:45:16.072485Z"
+     "end_time": "2025-06-17T18:53:19.530737Z",
+     "start_time": "2025-06-17T18:53:19.523718Z"
     }
    },
    "cell_type": "code",
@@ -512,18 +512,18 @@
        "(8200, 8)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 10
+   "execution_count": 23
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:45:16.129507Z",
-     "start_time": "2025-06-06T13:45:16.122869Z"
+     "end_time": "2025-06-17T18:53:19.565132Z",
+     "start_time": "2025-06-17T18:53:19.559151Z"
     }
    },
    "cell_type": "code",
@@ -536,31 +536,31 @@
        "(8213, 8)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 11
+   "execution_count": 24
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:45:16.253066Z",
-     "start_time": "2025-06-06T13:45:16.160436Z"
+     "end_time": "2025-06-17T18:53:19.662432Z",
+     "start_time": "2025-06-17T18:53:19.591834Z"
     }
    },
    "cell_type": "code",
    "source": "final.to_csv('../dataset/majority_informative.csv', index=False)",
    "id": "df4c92e12b159c69",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 25
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:45:16.297593Z",
-     "start_time": "2025-06-06T13:45:16.281596Z"
+     "end_time": "2025-06-17T18:53:19.697497Z",
+     "start_time": "2025-06-17T18:53:19.687487Z"
     }
    },
    "cell_type": "code",
@@ -674,20 +674,25 @@
        "</div>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "execution_count": 26
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-17T18:53:19.759524Z",
+     "start_time": "2025-06-17T18:53:19.757108Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "bfe5baa8b95c85de"
+   "id": "bfe5baa8b95c85de",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
