--- a/data/pre_processing.ipynb
+++ b/data/pre_processing.ipynb
@@ -16,8 +16,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:42:43.518627Z",
-     "start_time": "2025-06-06T13:42:40.259988Z"
+     "end_time": "2025-06-21T18:48:37.836235Z",
+     "start_time": "2025-06-21T18:48:37.729330Z"
     }
    },
    "cell_type": "code",
@@ -40,23 +40,14 @@
     "from sklearn.manifold import TSNE\n"
    ],
    "id": "c93333fb48f47465",
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "I:\\ETVOS\\2nd semester\\DS Lab 1\\DSLAB-Project\\venv1\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
-   "execution_count": 1
+   "outputs": [],
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:42:47.186094Z",
-     "start_time": "2025-06-06T13:42:43.524137Z"
+     "end_time": "2025-06-21T18:48:41.990999Z",
+     "start_time": "2025-06-21T18:48:38.105080Z"
     }
    },
    "cell_type": "code",
@@ -66,13 +57,13 @@
    ],
    "id": "b17a258ed4236501",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:42:47.513754Z",
-     "start_time": "2025-06-06T13:42:47.488754Z"
+     "end_time": "2025-06-17T18:50:11.043886Z",
+     "start_time": "2025-06-17T18:50:11.010971Z"
     }
    },
    "cell_type": "code",
@@ -230,8 +221,35 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:42:47.566667Z",
-     "start_time": "2025-06-06T13:42:47.562789Z"
+     "end_time": "2025-06-21T18:50:03.808331Z",
+     "start_time": "2025-06-21T18:50:03.738499Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df.isFraud.value_counts()",
+   "id": "8f0b7d113e94df43",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "isFraud\n",
+       "0    6354407\n",
+       "1       8213\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 16
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-17T18:50:11.113609Z",
+     "start_time": "2025-06-17T18:50:11.110234Z"
     }
    },
    "cell_type": "code",
@@ -243,8 +261,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:42:47.628503Z",
-     "start_time": "2025-06-06T13:42:47.623190Z"
+     "end_time": "2025-06-17T18:50:11.188458Z",
+     "start_time": "2025-06-17T18:50:11.184453Z"
     }
    },
    "cell_type": "code",
@@ -256,8 +274,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:42:47.740611Z",
-     "start_time": "2025-06-06T13:42:47.693089Z"
+     "end_time": "2025-06-17T18:50:11.295534Z",
+     "start_time": "2025-06-17T18:50:11.250714Z"
     }
    },
    "cell_type": "code",
@@ -287,8 +305,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:42:48.580890Z",
-     "start_time": "2025-06-06T13:42:47.785812Z"
+     "end_time": "2025-06-17T18:50:12.309632Z",
+     "start_time": "2025-06-17T18:50:11.331968Z"
     }
    },
    "cell_type": "code",
@@ -309,8 +327,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:42:48.627826Z",
-     "start_time": "2025-06-06T13:42:48.616638Z"
+     "end_time": "2025-06-17T18:50:12.356281Z",
+     "start_time": "2025-06-17T18:50:12.345231Z"
     }
    },
    "cell_type": "code",
@@ -428,8 +446,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:42:48.727643Z",
-     "start_time": "2025-06-06T13:42:48.680439Z"
+     "end_time": "2025-06-17T18:50:12.475754Z",
+     "start_time": "2025-06-17T18:50:12.422735Z"
     }
    },
    "cell_type": "code",
@@ -458,8 +476,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:43:33.084713Z",
-     "start_time": "2025-06-06T13:43:07.034512Z"
+     "end_time": "2025-06-17T18:50:39.128771Z",
+     "start_time": "2025-06-17T18:50:12.520272Z"
     }
    },
    "cell_type": "code",
@@ -471,8 +489,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:43:33.139879Z",
-     "start_time": "2025-06-06T13:43:33.090880Z"
+     "end_time": "2025-06-17T18:50:39.171288Z",
+     "start_time": "2025-06-17T18:50:39.133780Z"
     }
    },
    "cell_type": "code",
@@ -484,8 +502,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T13:43:33.172818Z",
-     "start_time": "2025-06-06T13:43:33.160851Z"
+     "end_time": "2025-06-17T18:50:39.213707Z",
+     "start_time": "2025-06-17T18:50:39.203429Z"
     }
    },
    "cell_type": "code",
@@ -612,8 +630,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-30T17:49:47.061097Z",
-     "start_time": "2025-05-30T17:49:47.057622Z"
+     "end_time": "2025-06-17T18:50:39.312244Z",
+     "start_time": "2025-06-17T18:50:39.308243Z"
     }
    },
    "cell_type": "code",
@@ -625,15 +643,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-24T14:51:44.266104Z",
-     "start_time": "2025-05-24T14:51:42.789123Z"
+     "end_time": "2025-06-17T18:50:39.514004Z",
+     "start_time": "2025-06-17T18:50:39.509838Z"
     }
    },
    "cell_type": "code",
    "source": "",
    "id": "a2a9a967cc1e58bd",
    "outputs": [],
-   "execution_count": 22
+   "execution_count": null
   },
   {
    "metadata": {},
